@@ -10,6 +10,7 @@ wmaker
 icewm
 blackbox
 fluxbox
+metacity
 kwm
 fvwm2
 fvwm
